@@ -39,6 +39,8 @@ Version TBA
 
  * Add SPrintf() template function.
 
+ * Fix repeated execution of the same switch() block in a template (#202).
+
 Version 0.5.4 (2022-10-23)
 
  * Allow passing arguments to structs created via ArrayResize() and
